src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Vision_Care_Term_Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vision Care Term Reason</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>General_Table__c.Table__c</field>
                <operation>equals</operation>
                <value>PRS6</value>
            </filterItems>
            <filterItems>
                <field>General_Table__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>General_Table__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qualtrics__Informed_Consent_Date__c</fullName>
        <description>This date is populated when a contact grants Informed Consent via Qualtrics Informed Consent Quick Start Survey</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Informed Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qualtrics__Informed_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is populated as a result of the Qualtrics Informed Consent Quick Start Survey</description>
        <label>Informed Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qualtrics__Last_Survey_Invitation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Survey Invitation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qualtrics__Last_Survey_Response__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Survey Response</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qualtrics__Net_Promoter_Score__c</fullName>
        <label>Net Promoter Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>D2C_Contact_Records</fullName>
        <columns>FULL_NAME</columns>
        <columns>Other_Email__c</columns>
        <columns>CONTACT.ADDRESS1_STREET</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <columns>CONTACT.ADDRESS1_ZIP</columns>
        <columns>Client_ID__c</columns>
        <columns>Client_Status__c</columns>
        <columns>Client_Strategic_Business_Unit__c</columns>
        <columns>Client_Termination_Date__c</columns>
        <columns>IP_Purchase_Date__c</columns>
        <columns>Adjusted_Subscriber_Coverage_End_Date__c</columns>
        <columns>Subscriber_Coverage_End_Date__c</columns>
        <columns>Subscriber_Status__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Consumer</value>
        </filters>
        <filters>
            <field>D2C_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>D2C Contacts</label>
    </listViews>
    <listViews>
        <fullName>ECP_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Eye_Care_Professional</value>
        </filters>
        <label>ECP Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <label>Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consumer</fullName>
        <active>true</active>
        <label>Consumer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Eye_Care_Professional</fullName>
        <active>true</active>
        <label>Eye Care Professional</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VSPR16_NPI_Type1_Check</fullName>
        <active>true</active>
        <description>Ensures the NPI entered passes the check digit logic</description>
        <errorConditionFormula>IF(NOT(ISBLANK(NPI__c)),
(IF( $RecordType.Name == &quot;Eye Care Professional&quot;, OR( 
(MOD( 
24+

VALUE(MID(NPI__c, 10, 1))+ 

IF( VALUE(MID(NPI__c, 9, 1))&lt;5, 
VALUE(MID(NPI__c, 9, 1))*2, 
VALUE(MID(TEXT(VALUE(MID(NPI__c, 9, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(NPI__c, 9, 1))*2),2,1)) 
) + 

VALUE(MID(NPI__c, 8, 1))+ 

IF( VALUE(MID(NPI__c, 7, 1))&lt;5, 
VALUE(MID(NPI__c, 7, 1))*2, 
VALUE(MID(TEXT(VALUE(MID(NPI__c, 7, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(NPI__c, 7, 1))*2),2,1)) 
) + 

VALUE(MID(NPI__c, 6, 1))+ 

IF( VALUE(MID(NPI__c, 5, 1))&lt;5, 
VALUE(MID(NPI__c, 5, 1))*2, 
VALUE(MID(TEXT(VALUE(MID(NPI__c, 5, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(NPI__c, 5, 1))*2),2,1)) 
) + 

VALUE(MID(NPI__c, 4, 1))+ 

IF( VALUE(MID(NPI__c, 3, 1))&lt;5, 
VALUE(MID(NPI__c, 3, 1))*2, 
VALUE(MID(TEXT(VALUE(MID(NPI__c, 3, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(NPI__c, 3, 1))*2),2,1)) 
) + 

VALUE(MID(NPI__c, 2, 1))+ 

IF( VALUE(MID(NPI__c, 1, 1))&lt;5, 
VALUE(MID(NPI__c, 1, 1))*2, 
VALUE(MID(TEXT(VALUE(MID(NPI__c, 1, 1))*2),1,1))+VALUE(MID(TEXT(VALUE(MID(NPI__c, 1, 1))*2),2,1)) 
) 

, 10) != 0),
(NOT( ISNUMBER(NPI__c) )), 
(NOT( OR(BEGINS(NPI__c, &apos;1&apos;) , BEGINS(NPI__c, &apos;2&apos;)) )), 
(NOT ( LEN(NPI__c) = 10 )) 
), false)), false)

&amp;&amp;

NOT($Profile.Name = &quot;VSP Technical User&quot; || $Profile.Name = &quot;System Administrator&quot; || $Profile.Name = &quot;VSP Integration User&quot;)

&amp;&amp;
Bypass_VC_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>NPI__c</errorDisplayField>
        <errorMessage>NPI number does not pass the check digit logic</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR19b_ReqdFields_Changing_DoctorID</fullName>
        <active>true</active>
        <description>Required Fields when changing a Doctor ID that has no previous values</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Vision_Care_Effective_Date__c)), Vision_Care_Effective_Date__c &lt;= TODAY())

&amp;&amp;

OR(ISBLANK(Vision_Care_End_Date__c), Vision_Care_End_Date__c &gt;= TODAY())

&amp;&amp;

PRIORVALUE(Doctor_ID__c)&lt;&gt;Doctor_ID__c

&amp;&amp;
LEN(PRIORVALUE(Doctor_ID__c))&gt;0

&amp;&amp;
(
OR(
PRIORVALUE(Previous_Doctor_ID_1__c)=Previous_Doctor_ID_1__c,
NOT(ISCHANGED(Previous_Effective_Date_1__c)),
NOT(ISCHANGED(Previous_End_Date_1__c)))
&amp;&amp;
OR(
PRIORVALUE(Previous_Doctor_ID_2__c)=Previous_Doctor_ID_2__c,
NOT(ISCHANGED(Previous_Effective_Date_2__c)),
NOT(ISCHANGED(Previous_End_Date_2__c)))
)

&amp;&amp;
Bypass_VC_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>You must enter the Previous Doctor ID, Previous Effective Date, and Previous End Date when changing a Doctor ID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR19b_SelectDegreeOrFacilityType</fullName>
        <active>true</active>
        <errorConditionFormula>IF($RecordType.Name == &quot;Eye Care Professional&quot;, true, false)

&amp;&amp;

(((Vision_Care_Effective_Date__c &lt;=  TODAY() ) &amp;&amp; (Vision_Care_End_Date__c &gt;= TODAY() ))
||
((Vision_Care_Effective_Date__c &lt;= TODAY() ) &amp;&amp; ISBLANK(Vision_Care_End_Date__c))
||
(Vision_Care_Effective_Date__c &gt; TODAY() )) 

&amp;&amp;


((ISBLANK(TEXT( Degree__c ) ) &amp;&amp; ISBLANK(TEXT( Facility_Type__c )))

||

(NOT(ISBLANK(TEXT( Degree__c ) )) &amp;&amp; NOT(ISBLANK(TEXT( Facility_Type__c )))))

&amp;&amp; 

NOT(OR( $Profile.Name = &quot;System Administrator&quot;,$Profile.Name = &quot;VSP Technical User&quot; , $Profile.Name = &quot;VSP Integration User&quot;))
&amp;&amp;
Bypass_VC_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>You must select either a Degree or Facility Type for a Vision Care Contact. Note: You cannot select both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR19b_VCEndDateRequiresEffectiveDate</fullName>
        <active>true</active>
        <description>Prevents user from entering a Vision Care End Date without a Vision Care Effective Date</description>
        <errorConditionFormula>RecordType.Name==&apos;Eye Care Professional&apos;
&amp;&amp;

OR(ISNEW(), ISCHANGED(Vision_Care_End_Date__c), ISCHANGED(Vision_Care_Effective_Date__c))
&amp;&amp;

NOT(ISBLANK(Vision_Care_End_Date__c))
&amp;&amp;

ISBLANK(Vision_Care_Effective_Date__c)
&amp;&amp;

NOT(OR( $Profile.Name = &quot;System Administrator&quot;,$Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP Integration User&quot;))

&amp;&amp;
Bypass_VC_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>You cannot enter a Vision Care End Date without a Vision Care Effective Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR19b_Validate_Doctor_ID</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Doctor_ID__c)) 
&amp;&amp;
((LEN(Doctor_ID__c) != 9)
||
NOT(ISNUMBER(Doctor_ID__c)))

&amp;&amp; 

NOT(OR( $Profile.Name = &quot;System Administrator&quot;,$Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP Integration User&quot;))
&amp;&amp;
Bypass_VC_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>Doctor ID must be 9 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR19b_VisionCareFacilityRequiredFields</fullName>
        <active>true</active>
        <errorConditionFormula>IF($RecordType.Name == &quot;Eye Care Professional&quot;, true, false) 

&amp;&amp; 

(((Vision_Care_Effective_Date__c &lt;=  TODAY() ) &amp;&amp; (Vision_Care_End_Date__c &gt;= TODAY() ))
||
((Vision_Care_Effective_Date__c &lt;= TODAY() ) &amp;&amp; ISBLANK(Vision_Care_End_Date__c))
||
(Vision_Care_Effective_Date__c &gt; TODAY() ))

&amp;&amp; 

NOT( ISBLANK(TEXT( Facility_Type__c  ) ) )

&amp;&amp;

(ISBLANK(  FirstName  )
||
ISBLANK( NPI__c )
||
ISBLANK( Doctor_ID__c )
||
ISBLANK( TEXT(Doctor_Type__c )))

&amp;&amp; 

NOT(OR( $Profile.Name = &quot;System Administrator&quot;,$Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP Integration User&quot;))
&amp;&amp;

Bypass_VC_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>You must enter First Name, Last Name, NPI, Doctor ID, and Doctor Type for a Vision Care Facility Contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR19b_VisionCareRequiredFields</fullName>
        <active>true</active>
        <errorConditionFormula>IF($RecordType.Name == &quot;Eye Care Professional&quot;, true, false) 

&amp;&amp; 

(((Vision_Care_Effective_Date__c &lt;=  TODAY() ) &amp;&amp; (Vision_Care_End_Date__c &gt;= TODAY() ))
||
((Vision_Care_Effective_Date__c &lt;= TODAY() ) &amp;&amp; ISBLANK(Vision_Care_End_Date__c))
||
(Vision_Care_Effective_Date__c &gt; TODAY() ))

&amp;&amp; 

NOT( ISBLANK(TEXT( Degree__c ) ) )

&amp;&amp;

(ISBLANK(  FirstName  )
||
ISBLANK( NPI__c )
||
ISBLANK( Doctor_ID__c )
||
ISBLANK( TEXT(Doctor_Type__c ))
||
ISBLANK( TEXT(Gender__c ))
||
ISBLANK( TEXT( Birthdate__c )))

&amp;&amp; 

NOT(OR( $Profile.Name = &quot;System Administrator&quot;,$Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP Integration User&quot;))
&amp;&amp;
Bypass_VC_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>You must enter First Name, Last Name, NPI, Doctor ID, Doctor Type, Gender, and Birthdate for a Vision Care Contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR19b_Vision_Care_End_Date_ECP</fullName>
        <active>true</active>
        <description>Validates the Vision Care End Date field</description>
        <errorConditionFormula>AND 
( 
OR 
( 
Vision_Care_End_Date__c &lt; Vision_Care_Effective_Date__c, 
Vision_Care_End_Date__c &lt; Today() 
), 
(NOT(ISBLANK(Vision_Care_End_Date__c)) &amp;&amp; ISBLANK(Vision_Care_Effective_Date__c)), 
$RecordType.Name = &quot;Eye Care Professional&quot;, 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;VSP Technical User&quot; ,
$Profile.Name &lt;&gt; &quot;VSP Integration User&quot;,
Bypass_VC_Validation_Rules__c = false
)</errorConditionFormula>
        <errorMessage>The Vision Care End Date must be greater than the Vision Care Effective Date. The Vision Care End Date cannot be in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR19b_Vision_Care_Term_Reason_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$RecordType.Name == &quot;Eye Care Professional&quot;,

NOT(ISBLANK(Vision_Care_End_Date__c)), 
OR(ISBLANK(Vision_Care_Term_Reason__c),
			Vision_Care_Term_Reason__r.Name == &quot;REAC&quot;, 
			Vision_Care_End_Date__c &lt; today()),
ISCHANGED(Vision_Care_End_Date__c),

$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;VSP Technical User&quot; ,
$Profile.Name &lt;&gt; &quot;VSP Integration User&quot;,
Bypass_VC_Validation_Rules__c = false 
)</errorConditionFormula>
        <errorDisplayField>Vision_Care_Term_Reason__c</errorDisplayField>
        <errorMessage>Vision Care End Date must be greater than or equal to today&apos;s date and requires a Termination Reason. &quot;REAC&quot; is not a valid Term Reason Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR1_VisionCareNetworkProvider</fullName>
        <active>true</active>
        <errorConditionFormula>(
ISCHANGED(FirstName) ||
ISCHANGED(Middle_Initial__c)|| 
ISCHANGED(LastName) || 
ISCHANGED(Marketing_Name__c) || 
ISCHANGED(NPI__c) || 
ISCHANGED( Gender__c) ||
ISCHANGED( Birthdate__c)||
ISCHANGED(AccountId) || 
ISCHANGED(Degree__c) || 
ISCHANGED(Title) || 
ISCHANGED(CAQH_ID__c)||
ISCHANGED(Doctor_ID__c)||
ISCHANGED( Additional_Languages_Spoken__c)||

ISCHANGED(Vision_Care_Provider_Advocate__c)||

ISCHANGED( Email )||

ISCHANGED(Phone)|| 

ISCHANGED(Accommodates_Children_0_3_years__c) ||
ISCHANGED(Accommodates_Children_3_5_years__c) ||
ISCHANGED(Specializes_in_Hard_to_fit_Contacts__c) ||
ISCHANGED(Specializes_in_Low_Vision__c) ||
ISCHANGED(Specializes_in_Vision_Therapy__c) ||
ISCHANGED(Ethnicity__c) ||
ISCHANGED(Specialty_Board_Type__c) ||
ISCHANGED(Specialty_Board_Status__c) ||
ISCHANGED(Specialty_Board_Award_Date__c) ||
ISCHANGED(Specialty_Board_Expiration_Date__c) ||
ISCHANGED(Specialty_Board_Lifetime_Certification__c) ||
ISCHANGED(Medicare_ID_Number__c) ||
ISCHANGED(Date_of_CMS_Medicare_Application_Submiss__c)||
ISCHANGED(Interested_in_Volunteering_for__c) 
)

&amp;&amp; 

NOT(OR( $Profile.Name = &quot;System Administrator&quot; ,$Profile.Name = &quot;VSP Network Recruitment User&quot;
,$Profile.Name = &quot;VSP Network Recruitment Management User&quot;
,$Profile.Name = &quot;VSP Technical User&quot;
,$Profile.Name = &quot;VSP Integration User&quot;)) 
&amp;&amp;

NOT($Permission.Credentialing_Data_Manager)

&amp;&amp;
Bypass_VC_Validation_Rules__c = false

&amp;&amp;
VC__c = true</errorConditionFormula>
        <errorMessage>You cannot edit fields for Vision Care Network Providers.  Please contact a Vision Care Network Administrator to make a change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR27_CheckForVCAccount</fullName>
        <active>true</active>
        <description>Ensures user associates a Vision Care Contact to Vision Care Business Account.</description>
        <errorConditionFormula>AND(
					$RecordType.Name == &apos;Eye Care Professional&apos;,
					OR(
									AND(ISNEW(),NOT(ISBLANK(Vision_Care_Effective_Date__c))),
									ISCHANGED(Vision_Care_Effective_Date__c),
									AND(ISCHANGED(Vision_Care_End_Date__c),ISBLANK(Vision_Care_End_Date__c)),
									AND(ISCHANGED(AccountId),
													NOT(ISBLANK(Vision_Care_Effective_Date__c)),
													OR(ISBLANK(Vision_Care_End_Date__c), Vision_Care_End_Date__c&gt;=TODAY())
												)  
					),
				  Account.Active_or_Future_Vision_Care_Account__c = false, 
					NOT(OR($Profile.Name == &apos;System Administrator&apos;,
											 $Profile.Name == &apos;VSP Technical User&apos;,
											 $Profile.Name == &apos;VSP Integration User&apos;)),
				Bypass_VC_Validation_Rules__c = false
					
	)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Primary location must be an Active or Future-Dated Vision Care Business Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR27_Check_Term_Reason_Is_REAC</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Vision_Care_End_Date__c ),
ISBLANK(Vision_Care_End_Date__c), 
    OR(ISBLANK(Vision_Care_Term_Reason__c),
    Vision_Care_Term_Reason__r.Name &lt;&gt; &quot;REAC&quot;))		
				
&amp;&amp; 

NOT(OR($Profile.Name = &quot;System Administrator&quot;,
							$Profile.Name = &quot;VSP Technical User&quot;)) 
&amp;&amp; 

Bypass_VC_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>You must add Term Reason Code &quot;REAC&quot; to the Vision Care Term Reason field when reactivating a Vision Care Provider.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR30_DoctorId_EffectiveDate</fullName>
        <active>true</active>
        <description>If Doctor Id is changed and the new Vision Care Effective Date is between the Previous Effective Date and Previous End Date error.</description>
        <errorConditionFormula>((ISCHANGED(Doctor_ID__c)
&amp;&amp;
	
RecordType.Name == &apos;Eye Care Professional&apos;
&amp;&amp;
				
NOT(ISBLANK(Vision_Care_Effective_Date__c)) 
&amp;&amp; 
	
Vision_Care_Effective_Date__c &gt;= Previous_Effective_Date_1__c
&amp;&amp;
	
Vision_Care_Effective_Date__c &lt;= Previous_End_Date_1__c)

||	

(ISCHANGED(Doctor_ID__c)
&amp;&amp;
	
RecordType.Name == &apos;Eye Care Professional&apos;
&amp;&amp;
	
NOT(ISBLANK(Vision_Care_Effective_Date__c))
&amp;&amp;

Vision_Care_Effective_Date__c &gt;= Previous_Effective_Date_2__c
&amp;&amp;

Vision_Care_Effective_Date__c &lt;= Previous_End_Date_2__c))
&amp;&amp;

NOT(OR($Profile.Name = &quot;System Administrator&quot;,
							$Profile.Name = &quot;VSP Technical User&quot;))
&amp;&amp;

Bypass_VC_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Vision_Care_Effective_Date__c</errorDisplayField>
        <errorMessage>Doctor ID&apos;s Effective and End Dates must not overlap.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR32_EmailRequiredMemCoordUser</fullName>
        <active>true</active>
        <description>Contact Email is required when a VSP Membership Coordination User creates a contact whose record type equals client.</description>
        <errorConditionFormula>AND( ISNEW() , ISBLANK( Email ) , NOT( OR($Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;VSP Technical User&quot;,  NOT($Profile.Name = &quot;VSP Membership Coordination User&quot;) ) ) )</errorConditionFormula>
        <errorMessage>An email address is required on all VSP Client Contacts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR34_NPASignDateValidation</fullName>
        <active>true</active>
        <description>The date entered must be today or in the past.</description>
        <errorConditionFormula>AND(NOT(OR($Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;VSP Technical User&quot;)), NOT( ISBLANK( NPA_Sign_Date__c ) ),  NPA_Sign_Date__c  &gt;  TODAY(), RecordType.Name==&apos;Eye Care Professional&apos;  )</errorConditionFormula>
        <errorMessage>NPA Sign Date must be today or in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSRP19b_VCEndDateRequiresEffectiveDate</fullName>
        <active>true</active>
        <description>Prevents user from entering a Vision Care End Date without a Vision Care Effective Date</description>
        <errorConditionFormula>RecordType.Name==&apos;Eye Care Professional&apos;
&amp;&amp;

OR(ISNEW(), ISCHANGED(Vision_Care_End_Date__c), ISCHANGED(Vision_Care_Effective_Date__c))
&amp;&amp;

NOT(ISBLANK(Vision_Care_End_Date__c))
&amp;&amp;

ISBLANK(Vision_Care_Effective_Date__c)
&amp;&amp;

NOT(OR( $Profile.Name = &quot;System Administrator&quot;,$Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP Integration User&quot;))

&amp;&amp;
Bypass_VC_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>You cannot enter a Vision Care End Date without a Vision Care Effective Date.</errorMessage>
    </validationRules>
</CustomObject>